[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "ha-container-updater"
version = "1.2.0"
description = "Home Assistant custom integration — update your HA Docker container from the UI"
license = { text = "MIT" }
requires-python = ">=3.12"

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "ANN",  # flake8-annotations
  "S",    # flake8-bandit (security)
  # "BLE",  # flake8-blind-except — disabled: broad except is idiomatic in HA integration code
  "RUF",  # ruff-specific rules
]
ignore = [
  "ANN401",  # Dynamically typed expressions (Any) — needed for HA APIs
  "S108",    # Probable insecure usage of /tmp — intentional, volume-mounted path
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "E402",    # Module level import not at top — stubs must be set up first
  "S101",    # Use of assert — expected and correct in pytest test functions
  "ANN",     # Type annotations — not required in test helpers / fixtures
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.ha_container_updater"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = false  # Required for HA coordinator generic usage
ignore_missing_imports = true  # homeassistant stubs not distributed

# ── Pytest ────────────────────────────────────────────────────────────────────
# NOTE: pytest reads ini config from the FIRST file it finds that contains
# [tool.pytest.ini_options]. If a legacy pytest.ini also exists in the repo
# root, pytest will use that instead and emit a warning. Delete pytest.ini.
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
